--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
            Age   : <input type="date" placeholder="birth of date"> <br/>
         Number : <input type="tel" placeholder="mobile"> <br/>
        Gmail : <input type="name" placeholder="gmail id"> <br/>
-     Outher : <input type="text" placeholder="Outher Contack"> <br/>
+     Stase: <input type="text" placeholder="Singel/Maried/Divosr/Outher"> <br/>
      M P     : <input type="text" placeholder="Bord Name"> <br/>
      M P : <input type="tel" placeholder="Prassing Year"> <br/>
-   M P    : <input type="name" placeholder="Present or Grad"> <br/>
+     M P    : <input type="name" placeholder="Present or Grad"> <br/>
      H S      : <input type="text" placeholder="Bord Name"> <br/>
      H S      : <input type="tel" placeholder="Passing Year"> <br/>
       H S    : <input type="name" placeholder="Present or Grad"> <br/>
