--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <button class="btn btn-primary" id="download"> Download CV Pdf</button> </div>
      <div class="col-md-12"> <div class="card" id="invoice">
  <div class="card-header bg-transparent header-elements-inline">
- <h6 class="card-title text-primary">Powerd by SourabHalder</h6> </div>
+ <h6 class="card-title text-primary">Wellcome My Resum</h6> </div>
            <div class="card-body"> <div class="row">
  <div class="col-sm-6"><div class="mb-4 pull-left"> </div> </div>
      <div class="col-sm-6"> <div class="mb-4 ">
@@ -64,17 +64,17 @@
      EX-JOB: <input type="text" placeholder="Ex-Job"> <br/>
    
    
-     <br> </br><br></br><hr/>
+     <br> </br><hr/>
      Location  :<br></br>
      Singeture :<br></br><hr/><br></br>
      <input type="button" value="submit">
                                     </form>
          
-          <br> </br> </div> </div> </div>
+          </div> </div> </div>
  <div class="card-body"> <div class="d-md-flex flex-md-wrap">
     <div class="pt-2 mb-3 wmin-md-400 ml-auto">
     <h6 class="mb-3 text-left">Thank You visit Again</h6> </div>
- <div class="text-right mt-3"> <button type="button" class="btn btn-primary"><b><i class="fa fa-paper-plane-o mr-1"> </i> </b> free Cv Downlord</button> </div> </div> </div>
+ <div class="text-right mt-3"> <button type="button" class="btn btn-primary"><b><i class="fa fa-paper-plane-o mr-1"> </i> </br>Powerd by Sourab Halder</button> </div> </div> </div>
  </center> </fieldset>
 </body>
 </html>
